sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value lenght
		for(i<-0 to lenght-2){
                            ^